@@ -137,7 +137,8 @@ function _advanced_forum_preprocess_comment(&$variables) {
       'caller' => 'advanced_forum',
       'picture_preset' => variable_get('advanced_forum_user_picture_preset', ''),
       'context' => $comment,
-      'disable_css' => TRUE
+      'disable_css' => TRUE,
+      'join_date_type' => variable_get('advanced_forum_author_pane_join_date_type', 'short'),
     ));
   }
   else {
